--- a/_includes/Pais.html
+++ b/_includes/Pais.html
@@ -1,6 +1,6 @@
 <p class='pais'>
   <a href='{{ site.baseurl }}'>RIA eIDAS konnektorteenus</a><br> 
-  <a href='{{ site.baseurl }}/Arikirjeldus'>Liidestamisjuhend</a> · 
+  <a href='{{ site.baseurl }}/Liidestamisjuhend'>Liidestamisjuhend</a> · 
   <a href='{{ site.baseurl }}/Spetsifikatsioon'>Tehniline spetsifikatsioon</a>
   <a href='https://github.com/e-gov/eIDAS-Client'>eIDAS-Client</a>
 </p>
