--- a/_includes/Jalus.html
+++ b/_includes/Jalus.html
@@ -1,3 +1,3 @@
 <hr>
 
-<i>Viimati muudetud: {{ site.viimatiMuudetud }}</i> · Riigi Infosüsteemi Amet · 2017-2018
+<i>Viimati muudetud: {{ site.viimatiMuudetud }}</i> · Riigi Infosüsteemi Amet · 2017-2018 · [{{ site.repo }}]({{ site.repo }})
