--- a/css/Times.css
+++ b/css/Times.css
@@ -57,7 +57,7 @@ p { margin: 0 0 1em 0; }
 
 /*#region Loetelud */
 #Tekst > ul {
-  list-style-type: none;
+  list-style-type: '-  ';
   margin: 0 0 1em 0;
   padding-left: 1em;
 }  
@@ -89,7 +89,7 @@ pre, code, samp {
   font-family: 'Anonymous Pro', monospace;
   font-size: 16px; color: black !important;
   background-color: lavender !important;
-  overflow-y: hidden; overflow-x: hidden;
+  overflow-y: hidden; overflow-x: scroll;
   page-break-inside: avoid; hyphens: none;
   text-transform: none;
 }
