--- a/css/Times.css
+++ b/css/Times.css
@@ -3,9 +3,9 @@ body {
   max-width: 60em;
   margin: 0 0; 
   padding: 0.6em 1.5em 2em 2em; 
-  font-family: 'Times New Roman', serif;
+  font-family: 'Segoe UI', Arial, serif;
   font-size: 12pt; 
-  color: black !important;
+  color: #24292E !important;
   line-height: 1.25 !important;
   }
 
