--- a/css/Times.css
+++ b/css/Times.css
@@ -122,16 +122,15 @@ a[href]:hover {
 /*#endregion */
 
 /*#region Paneelid */
-.note, .teade { border-radius: 8px; padding: 1rem; }
+.note, .teade { border-radius: 2px; padding: 0.1rem; }
 /* Märkus */
 .note { 
-  border: 1px solid coral;
   background-color: lavenderblush;
-  color: coral;
+  color: Tomato;
 }
 .teade {
-  border: 1px solid darkcyan;
-  background-color: Azure;
+  color: Cadetblue;
+  background-color: lightcyan;
 }
 
 /* Plokktsitaat */
