--- a/css/Times.css
+++ b/css/Times.css
@@ -4,7 +4,7 @@ body {
   margin: 0 0; 
   padding: 0.6em 1.5em 2em 2em; 
   font-family: 'Segoe UI', Arial, serif;
-  font-size: 12pt; 
+  font-size: 16px; 
   color: #24292E !important;
   line-height: 1.4 !important;
   }
