--- a/_includes/Pais.html
+++ b/_includes/Pais.html
@@ -2,6 +2,7 @@
   <a href='{{ site.baseurl }}'>RIA eIDAS konnektorteenus</a><br> 
   <a href='{{ site.baseurl }}/Arikirjeldus'>Ärikirjeldus</a> · 
   <a href='{{ site.baseurl }}/Spetsifikatsioon'>Tehniline spetsifikatsioon</a> · 
-  <a href='https://github.com/e-gov/eIDAS-Client'>eIDAS-Client</a>
+  <a href='https://github.com/e-gov/eIDAS-Client'>eIDAS-Client</a> · 
+  <a href='https://e-gov.github.io/TARA-Doku/'>autentimisteenus TARA</a>
 </p>
 <p>&nbsp;</p>
