--- a/css/Times.css
+++ b/css/Times.css
@@ -91,9 +91,9 @@ th, td { padding: 2px; }
 /*#region Kood; asciiflow joonised */
 pre, code, samp {
   font-family: 'Source Code Pro', monospace;
-  font-size: 16px; color: black !important;
+  font-size: 15px; color: Red !important;
   color: Black !important;
-  background-color: lightgray !important;
+  background-color:none !important;
   overflow-y: hidden; overflow-x: scroll;
   page-break-inside: avoid; hyphens: none;
   text-transform: none;
