--- a/css/Times.css
+++ b/css/Times.css
@@ -86,13 +86,14 @@ table { width: 100%; margin: 0 4em 2em 0; }
 table { border-collapse: collapse; }    
 table, th, td { border: 1px solid black; }
 th, td { padding: 2px; }
+th { font-weight: normal; font-style: italic; text-align: center; }
 /*#endregion */
 
 /*#region Kood; asciiflow joonised */
 pre, code, samp {
   font-family: 'Source Code Pro', monospace;
-  font-size: 15px;
-  color: Red !important;
+  font-size: 16px;
+  color: darkslategray !important;
   overflow-y: hidden; overflow-x: scroll;
   page-break-inside: avoid; hyphens: none;
   text-transform: none;
@@ -126,11 +127,11 @@ a[href]:hover {
 /*#endregion */
 
 /*#region Paneelid */
-.kastigaTeade { 
-  border-radius: 8px; padding: 1rem;
-  border-color: Tomato;
-  background-color: lavenderblush;
-  color: Tomato;
+.silt { 
+  border-radius: 4px; padding: 0.2rem 0.3rem;
+  border-color: DarkCyan;
+  background-color: Azure;
+  color: Teal;
   text-align: center;
 }
 .teade {
