--- a/css/Times.css
+++ b/css/Times.css
@@ -102,7 +102,10 @@ pre code,
 code code {
   font-size: 100%;
 }
-pre { margin-top: 1em; margin-bottom: 1em; }
+pre {
+  margin-top: 1em; margin-bottom: 1em;
+  overflow: hidden;
+}
 /*#endregion */
 
 /*#region Lingid */
