--- a/_layouts/Times.html
+++ b/_layouts/Times.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/css/Times.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/Colourful.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/Github.css">
 
 </head>
 
