--- a/css/Times.css
+++ b/css/Times.css
@@ -104,7 +104,8 @@ code code {
 }
 pre {
   margin-top: 1em; margin-bottom: 1em;
-  overflow: hidden;
+  white-space: pre-wrap; 
+  /* overflow: hidden; */
 }
 /*#endregion */
 
