--- a/css/Times.css
+++ b/css/Times.css
@@ -94,6 +94,7 @@ pre, code, samp {
   font-family: 'Source Code Pro', monospace;
   font-size: 16px;
   color: darkslategray !important;
+  background-color: #f6f8fa; /* nagu GitHubis */
   overflow-y: hidden; overflow-x: scroll;
   page-break-inside: avoid; hyphens: none;
   text-transform: none;
