--- a/_includes/Pais.html
+++ b/_includes/Pais.html
@@ -1,9 +1,6 @@
 <p class='pais'>
-  <a href='{{ site.baseurl }}'>RIA eIDAS konnektorteenus</a><br> 
-  <a href='{{ site.baseurl }}/Arikirjeldus'>Ärikirjeldus</a> · 
-  <a href='{{ site.baseurl }}/Spetsifikatsioon'>Spetsifikatsioon</a> · 
+  <a href='{{ site.baseurl }}'>Riiklik eIDAS-Node</a><br> 
   <a href='{{ site.baseurl }}/Viited'>Viited</a> · 
-  <a href='https://github.com/e-gov/eIDAS-Client'>eIDAS-Client</a> · 
   <a href='https://e-gov.github.io/TARA-Doku/'>autentimisteenus TARA</a>
 </p>
 <p>&nbsp;</p>
