--- a/_includes/Pais.html
+++ b/_includes/Pais.html
@@ -1,5 +1,5 @@
 <p class='pais'>
-  <a href='https://e-gov.github.io/TARA-Doku/'>*autentimisteenus TARA*</a>
+  <a href='https://e-gov.github.io/TARA-Doku/'>autentimisteenus TARA</a>
   <a href='{{ site.baseurl }}'>Riiklik eIDAS-Node</a><br> 
   <a href='{{ site.baseurl }}/Viited'>Viited</a> · 
 </p>
