--- a/_includes/Pais.html
+++ b/_includes/Pais.html
@@ -1,4 +1,4 @@
 <p class='pais'>
-  <a href='https://e-gov.github.io/TARA-Doku/'>autentimisteenus TARA</a>
+  <a href='https://e-gov.github.io/TARA-Doku/'>Riigi autentimisteenus</a>
 </p>
 <p>&nbsp;</p>
